# good-filings

./: .gitattributes  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run.sh
html/Form 10-K. For the Fiscal Year Ended 2024-12-31/: amzn-20241231xex191.htm  amzn-20241231xex211.htm  amzn-20241231xex231.htm  amzn-20241231xex311.htm  amzn-20241231xex312.htm  amzn-20241231xex321.htm  amzn-20241231xex322.htm
html/Form 10-Q. For the Fiscal Quarter Ended 2024-03-31/: amzn-20240331.xsd  amzn-20240331_def.xml  amzn-20240331_lab.xml  amzn-20240331_pre.xml  amzn-20240331xex311.htm  amzn-20240331xex312.htm  amzn-20240331xex321.htm  amzn-20240331xex322.htm
html/Form 8-K. 2024-05-14/: amzn-20240514.xsd  amzn-20240514_lab.xml  amzn-20240514_pre.xml
html/Form DEF 14A. Definitive Proxy Statement. Notice of 2024 Annual Meeting of Shareholders/: amzn-20231231.xsd  amzn-20231231_def.xml  amzn-20231231_lab.xml  amzn-20231231_pre.xml
html/amzn_2024_10k/: amzn-20241231.htm
html/amzn_2025_10q/: amzn-20250930.htm
